--- a/main.html
+++ b/main.html
@@ -4,12 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<meta charset="utf-8">
+	<title>Trivia </title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<h1>What is the capital of India ?</h1>
+<label><input type="radio" name="input">New Delhi</label><br>
+<label><input type="radio" name="input">Mumbai</label>
+<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+New Delhi is the capital of India and an administrative district of NCT Delhi.
+</blockquote>
 
 </body>
 
